I have  improved set up of backend server

--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "scripts": {
+      "start": "react-scripts start",
+      "start-backend": "nodemon src/Backend/app.js",
+      "build": "react-scripts build",
+      "test": "react-scripts test --env=jsdom",
+      "eject": "react-scripts eject"
+  
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,3 +33,4 @@
     ]
   }
 }
+ 
