--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kodflix",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "express": "^4.17.1",
     "react": "^16.8.6",
@@ -9,13 +10,14 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
-    "scripts": {
-      "start": "react-scripts start",
-      "start-backend": "nodemon src/Backend/app.js",
-      "build": "react-scripts build",
-      "test": "react-scripts test --env=jsdom",
-      "eject": "react-scripts eject"
-  
+  "scripts": {
+    "start":"npm-run-all -s build start-backend",
+    "start-frontend": "react-scripts start",
+    "start-dev": "npm-run-all -p start-frontend start-backend",
+    "start-backend": "nodemon src/Backend/app.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom", 
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,6 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
- 
