--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "npm-run-all": "^4.1.5",
     "express": "^4.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -35,6 +36,6 @@
     ]
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    
   }
 }
