--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom", 
     "eject": "react-scripts eject",
-    "_start-backend": "node src/Backend/app.js",
+    "_start-backend": "node src/Backend/app.js"
 
   },
   "eslintConfig": {
