--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "npm-run-all": "^4.1.5",
     "express": "^4.17.1",
+    "nodemon": "^1.19.1",
+    "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start":"npm-run-all -s build _start-backend",
+    "start": "npm-run-all -s build start-backend",
     "start-frontend": "react-scripts start",
     "start-dev": "npm-run-all -p start-frontend start-backend",
     "start-backend": "nodemon src/Backend/app.js",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom", 
-    "eject": "react-scripts eject",
-    "_start-backend": "node src/Backend/app.js"
-
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
